--- a/style.css
+++ b/style.css
@@ -6,14 +6,23 @@ body {
 }
 
 header {
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 20px 0;
-    background-color: #333;
+    background-color: #22668D;
     color: #fff;
 }
 
+.logo {
+    display: inline;
+    width: 220px; /* Adjust the width as needed */
+    height: auto;
+    margin-right: 0px; /* Add some space between the logo and the header text */
+}
+
 h1 {
-    font-size: 36px;
+    font-size: 30px;
 }
 
 .menu-container {
@@ -21,7 +30,7 @@ h1 {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-    background-color: #fff;
+    background-color: #FFFADD;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
